Ready to four queens